# DeepSeeker

./: .gitignore  BUILD.md  CODEBASE_OVERVIEW.md  CROSS_FILE_BATCH_OPTIMIZATION.md  DAY4_VALIDATION_TEST.md  DEVELOPMENT.md  EXPLORATION_SUMMARY.txt  IMPLEMENTATION_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_REPORT.md  INCREMENTAL_INDEXING_IMPROVEMENTS.md  OCR_SETUP.md  PHASE1_SUMMARY.md  README.md  TAURI_DESKTOP_APP_FEATURES.md  UNIT_TEST_REPORT.md  index.html  package-lock.json  package.json  performance_test_plan.md  setup.sh  start.sh  stop.sh  test_example.md  vite.config.ts
backend/: .env.example  install_nougat.sh  main.py  requirements.txt  test_vision_model.py
backend/app/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  base.py  conversation.py  organization.py
backend/app/routes/: __init__.py  chat.py  conversations.py  documents.py  folders.py  graph.py  insights.py  research.py  search.py  tags.py
backend/app/schemas/: conversation.py  organization.py
backend/app/services/: __init__.py  background.py  bm25.py  clustering.py  conversation.py  discovery.py  gaps.py  indexing.py  llm.py  model_manager.py  parser.py  rag.py  reports.py  rerank_mlx.py  search.py  trends.py  vector_store.py
backend/app/services/parsing/: __init__.py  models.py  ocr_engine.py  router.py  (+5 more)
browser-extension/: ICONS_NEEDED.txt  README.md  background.js  content.js  manifest.json
electron/: main.js  package-lock.json  package.json  preload.js  splash.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CommandPalette.tsx  DocumentTOC.tsx  ErrorBoundary.tsx  FolderTree.tsx  LeftSidebar.tsx  MarkdownRenderer.tsx  RightSidebar.tsx  SettingsModal.tsx  TagSelector.tsx  TitleBar.tsx  Toast.tsx
frontend/src/hooks/: useConversation.ts  useCurrentViewType.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/stores/: conversationStore.ts  copilotStore.ts  themeStore.ts  uiStore.ts
frontend/src/types/: conversation.ts  electron.d.ts
frontend/src/views/: ChatView.tsx  ClustersView.tsx  DocumentDetailView.tsx  DocumentLibraryView.tsx  GapsView.tsx  GraphView.tsx  ReportsView.tsx  ResearchInsightsView.tsx  ResearchOverviewView.tsx  TrendsView.tsx
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chunker.rs  commands.rs  config.rs  db.rs  embeddings.rs  http_server.rs  lib.rs  main.rs  models.rs  pdf_ocr.rs  pdf_parser.rs  progress.rs  search.rs  watcher.rs
src-tauri/tests/fixtures/: sample_readme.md
src/components/: ChunkPreviewPanel.tsx  CollectionManager.tsx  CreateCollectionDialog.tsx  ErrorBoundary.tsx  ErrorLogsPanel.tsx  IndexingProgress.tsx  ModelManager.tsx  PerformanceMonitor.tsx  SearchFilters.tsx  SearchInterface.tsx  Settings.tsx  ShortcutsHelp.tsx  ThemeToggle.tsx  UpdateChecker.tsx  ValidationTest.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useKeyboardShortcuts.ts
test-data/: validation_test.md
(+5 files in other folders)
