[package]
name = "deepseeker"
version = "1.0.0"
description = "Local-first neural search engine for Markdown and documentation"
authors = ["DeepSeeker Team"]
license = "Proprietary"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab", "modern_sqlite"] }
sqlite-vec = "0.1"  # Vector similarity search extension

# Markdown parsing
pulldown-cmark = "0.12"

# ML/Embeddings for hybrid search
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "half"] }
ndarray = "0.16"
tokenizers = "0.20"

# File handling
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
pdf-extract = "0.7"
notify = "6.1"

# OCR support for scanned PDFs
leptess = "0.14"  # Tesseract OCR Rust binding
image = "0.25"    # Image processing for PDF to image conversion
pdfium-render = "0.8"  # PDF to image conversion using PDFium

# Utilities
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

# HTTP Server for browser extension
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
